--- a/app/views/createDesign.html
+++ b/app/views/createDesign.html
@@ -12,20 +12,29 @@
             </div>
         </div-->
         <div class="pleaseDesign">
-            <div><span>恭请设计</span></div>
+            <div>
+                <span>恭请设计</span>
+                <img src="img/vertical_logo.png" class="verticalLogo">
+            </div>
         </div>
         <div class='row genderButtonRow'>
-            <div class="col-xs-6">
+            <div class="col-xs-6 maleButton">
                 <div>
-                    <span class="icon-m" ng-click="onMaleSelected()"></span>
+                    <span class="icon-m text" ng-click="onMaleSelected()"></span>
                 </div>
-                <div><img src="img/genderMale.png" ng-click="onMaleSelected()"></div>
+                <div>
+                    <span class="icon-m1 icon" ng-click="onMaleSelected()"></span>
+                </div>
+                <!--div><img src="img/genderMale.png" ng-click="onMaleSelected()"></div-->
             </div>
-            <div class="col-xs-6">
+            <div class="col-xs-6 femaleButton">
                 <div>
-                    <span class="icon-f" ng-click="onFemalerSelected()"></span>
+                    <span class="icon-f text" ng-click="onFemalerSelected()"></span>
                 </div>
-                <div><img src="img/genderFemale.png" ng-click="onFemalerSelected()"></div>
+                <div>
+                    <span class="icon-f1 icon" ng-click="onFemalerSelected()"></span>
+                </div>
+                <!--div><img src="img/genderFemale.png" ng-click="onFemalerSelected()"></div-->
             </div>
         </div>
         <!--div class='row newDesignInfoArea'>
