--- a/app/views/addressDetail.html
+++ b/app/views/addressDetail.html
@@ -42,7 +42,7 @@
         <span class="glyphicon glyphicon-floppy-disk"></span>
     </div>
     <div class="naviBtnRow">
-        <span class="glyphicon glyphicon-chevron-left" ng-click="onBackFromAddreeDetailClicked()"></span>
+        <span class="icon-undo" ng-click="onBackFromAddreeDetailClicked()"></span>
         <span class="glyphicon glyphicon-send"></span>
     </div>
 </div>
