--- a/app/views/createDetail.html
+++ b/app/views/createDetail.html
@@ -62,7 +62,7 @@
         </div-->
         <div class='toolRow' style="{{htmlItemStyle.designToolArea.styleStr}}">
             <div class="backButton">
-                <span class="glyphicon glyphicon-chevron-left" ng-click="onCreateDesignBackClicked()"></span>
+                <span class="icon-undo" ng-click="onCreateDesignBackClicked()"></span>
             </div>
             <div class="highlightButton">
                 <span class="glyphicon glyphicon-star"></span>
