--- a/app/views/management.html
+++ b/app/views/management.html
@@ -4,11 +4,21 @@
     </div>
     <div class="orderContainer">
         <div>
-            <span>预览</span>
-            <span>用户ID</span>
-            <span>订单状态</span>
-            <span>性别</span>
-            <span>订单描述</span>
+            <div>
+                <span>预览</span>
+            </div>
+            <div>
+                <span>用户ID</span>
+            </div>
+            <div>
+                <span>订单状态</span>
+            </div>
+            <div>
+                <span>性别</span>
+            </div>
+            <div>
+                <span>订单描述</span>
+            </div>
         </div>
         <div ng-repeat="oOrder in aOrders" class="orderItem">
             <div class="orderImageDiv">
