--- a/app/views/payCouponList.html
+++ b/app/views/payCouponList.html
@@ -31,7 +31,7 @@
         </div>
     </div>
     <div class="naviBtnRow">
-        <span class="glyphicon glyphicon-chevron-left" ng-click="onBackFromPayCouponListClicked()"></span>
+        <span class="icon-undo" ng-click="onBackFromPayCouponListClicked()"></span>
         <span class="glyphicon glyphicon-send"></span>
     </div>
 </div>
