--- a/app/views/saveDetail.html
+++ b/app/views/saveDetail.html
@@ -26,7 +26,7 @@
         </div>
     </div>
     <div class="naviBtnRow">
-        <span class="glyphicon glyphicon-chevron-left" ng-click="onBack2DesignDetailClicked()"></span>
+        <span class="icon-undo" ng-click="onBack2DesignDetailClicked()"></span>
         <span class="glyphicon glyphicon-send"></span>
     </div>
     <!--div ui-view="purchaseDesign">
