--- a/app/views/orderDesign.html
+++ b/app/views/orderDesign.html
@@ -93,7 +93,7 @@
         </div>
     </div>
     <div class="naviBtnRow">
-        <span class="glyphicon glyphicon-chevron-left" ng-click="onBack2SaveDetailClicked()"></span>
+        <span class="icon-undo" ng-click="onBack2SaveDetailClicked()"></span>
         <span class="glyphicon glyphicon-send"></span>
     </div>
 </div>
